--- a/page/home/index/index.axml
+++ b/page/home/index/index.axml
@@ -1,6 +1,25 @@
 <view class="page">
-  <view class="top"></view>
-  <view class="content"></view>
+  <view class="top" style="background:url({{data.picture}})"></view>
+  <view class="content">
+    <view class="content-title">
+      <text>今日积分排名</text>
+    </view>
+    <view class="content-main">
+      <view class="number">
+        <text class="number-amount">{{data.rank}}</text>
+        <text class="number-text">排名</text>
+      </view>
+      <view class="number">
+        <text class="number-amount">{{data.amount}}</text>
+        <text class="number-text">今日积分</text>
+      </view>
+    </view>
+    <view class="content-bottom">
+      <image src="{{data.top.image}}" class="content-bottom-image">
+      <text class="content-bottom-text">{{data.top.name}}获得今日的积分冠军</text>
+      <text class="right-arrow"></text>
+    </view>
+  </view>
   <list className="list">
     <view solt="header" class="list-header">积分动态</view>
     <block a:for="{{items}}" class="list-block">
