--- a/page/home/index/index.axml
+++ b/page/home/index/index.axml
@@ -15,9 +15,9 @@
       </view>
     </view>
     <view class="content-bottom">
-      <image src="{{data.top.image}}" class="content-bottom-image">
+      <image src="{{data.top.image ? data.top.image : 'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1541159022813&di=285917cd1f1b7deabe424572b8d3a3a5&imgtype=0&src=http%3A%2F%2Fimg1.gamersky.com%2Fimage2014%2F01%2F20140123ge_11%2Fimage031_S.jpg'}}" class="content-bottom-image"/>
       <text class="content-bottom-text">{{data.top.name}}获得今日的积分冠军</text>
-      <text class="right-arrow"></text>
+      <text class="right-arrow">></text>
     </view>
   </view>
   <list className="list">
