--- a/page/work/declare/index.axml
+++ b/page/work/declare/index.axml
@@ -1,5 +1,32 @@
 <import src="/components/dropdown/index.axml" />
 
-<view>
-  <template is="DropdownSelect" data={{...dropdownSelectData}} />
-</view>
+<!-- <view class="page"> -->
+  <view>
+    <template is="DropdownSelect" data={{...dropdownSelectData}} />
+  </view>
+  <view class="search"></view>
+  <list className="list">
+      <block a:for="{{items}}" class="list-block">
+        <list-item
+          className="list-item"
+          key="item-{{index}}"
+          index="{{index}}"
+          last="{{index === (items.length - 1)}}"
+          arrow="{{item.arrow}}"
+          align="{{item.align}}"
+          onClick="onItemClick"
+          multipleLine="{{true}}"
+          wrap="{{true}}"
+        >
+          {{item.title}}
+          <view class="brief">
+            <view class="brief-content">{{item.content}}</view>
+            <view class="brief-bottom">
+              <text class="brief-bottom-left">积分奖励：{{item.bottom.left}}</text>
+              <text class="brief-bottom-right">{{item.bottom.right}}</text>
+            </view>
+          </view>
+        </list-item>
+      </block> 
+    </list>
+  <!-- </view> -->
