--- a/page/home/index/index.axml
+++ b/page/home/index/index.axml
@@ -14,14 +14,16 @@
         <text class="number-text">今日积分</text>
       </view>
     </view>
-    <view class="content-bottom">
+    <view class="content-bottom" onTap="rankTo">
       <image src="{{data.top.image ? data.top.image : 'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1541159022813&di=285917cd1f1b7deabe424572b8d3a3a5&imgtype=0&src=http%3A%2F%2Fimg1.gamersky.com%2Fimage2014%2F01%2F20140123ge_11%2Fimage031_S.jpg'}}" class="content-bottom-image"/>
       <text class="content-bottom-text">{{data.top.name}}获得今日的积分冠军</text>
-      <text class="right-arrow">></text>
+      <text class="right-arrow"></text>
     </view>
   </view>
   <list className="list">
-    <view solt="header" class="list-header" onTap="personalTo">积分动态</view>
+    <view solt="header" class="list-header" >
+      <text>积分动态</text>  
+    </view>
     <block a:for="{{items}}" class="list-block">
       <list-item
         className="list-item"
@@ -37,8 +39,8 @@
       >
         {{item.name}}
         <view class="brief">
-          <text class="brief-title">{{item.brief.title}}</text>
-          <text class="brief-content">{{item.brief.content}}</text>
+          <view class="brief-title">{{item.brief.title}}</view>
+          <view class="brief-content">{{item.brief.content}}</view>
         </view>
         <view slot="extra" class="extra">
           {{item.extra.points>0 ? '+' : ''}}{{item.extra.points}}    {{item.extra.type}}
