--- a/page/personal/index/index.axml
+++ b/page/personal/index/index.axml
@@ -1,25 +1,31 @@
-<view class="page">
+<view class="page" style="min-height: {{height}}">
+  <view class="wrapper">
   <card
     thumb="{{data.avatar}}"
     title="{{data.name}}"
     subTitle="{{data.info}}"
     onClick="onCardClick"
-    footer="积分：{{data.amount}}  基础积分：{{data.base}}"
-  />
+  >
+    <view class="am-card-footer">
+      <text>积分：{{data.amount}}</text>
+      <text style="margin-left: 34px;">基础积分：{{data.base}}</text>
+    </view>
+  </card>
   <view class="chart"></view>
   <view class="content">
     <view class="content-item" onTap="toFrame">
-      <text class="content-item-text">企业组织架构</text>
+      <text class="frame">企业组织架构</text>
       <text class="right-arrow"></text>
     </view>
     <view class="content-item" onTap="toTask">
-      <text class="content-item-text">我的任务</text>
+      <text class="task">我的任务</text>
       <text class="right-arrow"></text>
     </view>
     <view class="content-item" onTap="toDiary">
-      <text class="content-item-text">我的日记</text>
+      <text class="diary">我的日记</text>
       <text class="right-arrow"></text>
     </view>
   </view>
-  <button type="default" plain>退出登录</button>
+  </view>
+  <button type="default" plain hover-class="none">退出登录</button>
 </view>
