--- a/page/home/index/index.axml
+++ b/page/home/index/index.axml
@@ -6,17 +6,17 @@
     </view>
     <view class="content-main">
       <view class="number">
-        <text class="number-amount">{{data.rank}}</text>
+        <text class="number-amount">{{data.rank == null ? '-' : data.rank}}</text>
         <text class="number-text">排名</text>
       </view>
       <view class="number">
-        <text class="number-amount">{{data.amount}}</text>
+        <text class="number-amount">{{data.amount == null ? '-' : data.amount}}</text>
         <text class="number-text">今日积分</text>
       </view>
     </view>
     <view class="content-bottom" onTap="rankTo">
-      <image src="{{data.top.image ? data.top.image : 'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1541159022813&di=285917cd1f1b7deabe424572b8d3a3a5&imgtype=0&src=http%3A%2F%2Fimg1.gamersky.com%2Fimage2014%2F01%2F20140123ge_11%2Fimage031_S.jpg'}}" class="content-bottom-image"/>
-      <text class="content-bottom-text">{{data.top.name}}获得今日的积分冠军</text>
+      <image src="{{data.avatar ? data.avatar : 'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1541159022813&di=285917cd1f1b7deabe424572b8d3a3a5&imgtype=0&src=http%3A%2F%2Fimg1.gamersky.com%2Fimage2014%2F01%2F20140123ge_11%2Fimage031_S.jpg'}}" class="content-bottom-image"/>
+      <text class="content-bottom-text">{{data.name}}获得今日的积分冠军</text>
       <text class="right-arrow"></text>
     </view>
   </view>
@@ -30,20 +30,20 @@
         key="item-{{index}}"
         index="{{index}}"
         last="{{index === (items.length - 1)}}"
-        thumb="{{item.thumb ? item.thumb : 'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1541159022813&di=285917cd1f1b7deabe424572b8d3a3a5&imgtype=0&src=http%3A%2F%2Fimg1.gamersky.com%2Fimage2014%2F01%2F20140123ge_11%2Fimage031_S.jpg'}}"
+        thumb="{{item.userImg ? item.userImg : 'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1541159022813&di=285917cd1f1b7deabe424572b8d3a3a5&imgtype=0&src=http%3A%2F%2Fimg1.gamersky.com%2Fimage2014%2F01%2F20140123ge_11%2Fimage031_S.jpg'}}"
         arrow="{{item.arrow}}"
         align="{{item.align}}"
         onClick="onItemClick"
         multipleLine="{{true}}"
         wrap="{{true}}"
       >
-        <text class="name">{{item.name}}</text>
+        <text class="name">{{item.userName}}</text>
         <view class="brief">
-          <view class="brief-title">{{item.brief.title}}</view>
-          <view class="brief-content">{{item.brief.content}}</view>
+          <view class="brief-title">{{item.approvalTitle}}</view>
+          <view class="brief-content">{{item.approvalContent}}</view>
         </view>
         <view slot="extra" class="extra">
-          {{item.extra.points>0 ? '+' : ''}}{{item.extra.points}}    {{item.extra.type}}
+          {{item.addIntegral>0 ? '+' : ''}}{{item.addIntegral}}    {{item.integralTypeId == '1' ? 'A分' : (item.integralTypeId == '2' ? 'B分' : 'C分')}}
         </view>
       </list-item>
     </block> 
