--- a/page/home/index/index.axml
+++ b/page/home/index/index.axml
@@ -1,5 +1,5 @@
 <view class="page">
-  <view class="top" style="background:url({{data.picture}})"></view>
+  <view class="top" style="background:url({{data.img}}) 100%/100% no-repeat"></view>
   <view class="content">
     <view class="content-title">
       <text>今日积分排名</text>
