--- a/page/work/declare/approve/index.axml
+++ b/page/work/declare/approve/index.axml
@@ -1,42 +1,43 @@
 <view class="page">
   <form onSubmit="formSubmit" class="page-section">
-    <input-item
-      className="input-text"
-      name="title"
-    >
-      审批标题
-      <!-- <view slot="extra" style="display:flex;" onTap="onExtraTap">
-        <icon size="18" type="clear" />
-      </view> -->
-    </input-item>
+    <view class="page-section-title">审批标题
+    </view>
+    <view class="page-section-demo">
+      <textarea auto-height placeholder="" name="title" style="font-size: 13px" auto-height="{{true}}" maxlength="-1" value="{{options.title}}" />
+    </view>
     <view class="form-line" />
-    <input-item
-      className="input-text"
-      name="content"
-    >
-      审批内容
-      <!-- <view slot="extra" style="display:flex;" onTap="onExtraTap">
-        <icon size="18" type="clear" />
-      </view> -->
-    </input-item>
+    <view class="page-section-title">审批内容  
+    </view>
+    <view class="page-section-demo">
+      <textarea auto-height placeholder="" name="content" style="font-size: 13px" auto-height="{{true}}" maxlength="-1" value="{{options.content}}" />
+    </view>
     <view class="form-line" />
     <input-item
       className="input-text"
       name="type"
+      disabled="true"
+      value="{{options.type == '1' ? '品德积分' : (options.type == '2' ? '业绩积分' : '行为积分')}}"
     >
-      审批类型
-      <!-- <view slot="extra" style="display:flex;" onTap="onExtraTap">
-        <icon size="18" type="clear" />
-      </view> -->
+      积分类型
     </input-item>
     <view class="form-line" />
     <view class="page-section-title">备注</view>
     <view class="page-section-demo">
-      <textarea auto-height placeholder="输入备注信息" name="textarea" />
+      <textarea auto-height placeholder="输入备注信息" name="textarea" style="font-size: 14px" />
     </view>
     <view class="page-section-btns">
       <view onTap="chooseImage">选择照片</view>
     </view>
+    <view class="form-line" />
+    <picker onChange="changePoints" value="{{arrIndexPoints}}" range="{{pointsArray}}" name="points">
+      <view class="row">
+        <view class="row-title">申请积分
+        </view>
+        <view class="row-extra">当前选择：{{pointsArray[arrIndexPoints]}}
+        </view>
+        <image class="row-arrow" src="/image/arrowright.png" mode="aspectFill" />
+      </view>
+    </picker>
     <view class="form-line" />
     <picker onChange="changeFrom" value="{{arrIndexFrom}}" range="{{objectArray}}" range-key="name" name="from">
       <view class="row">
@@ -62,6 +63,6 @@
       </view>
     </picker>
     <view class="form-line" />
-    <button formType="submit" >提交</button>
+    <button formType="submit" type="primary" >提交</button>
   </form>
 </view>
