--- a/page/home/index/index.axml
+++ b/page/home/index/index.axml
@@ -16,7 +16,7 @@
     </view>
     <view class="content-bottom" onTap="rankTo">
       <image src="{{data.avatar ? data.avatar : 'https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1541159022813&di=285917cd1f1b7deabe424572b8d3a3a5&imgtype=0&src=http%3A%2F%2Fimg1.gamersky.com%2Fimage2014%2F01%2F20140123ge_11%2Fimage031_S.jpg'}}" class="content-bottom-image"/>
-      <text class="content-bottom-text">{{data.name}}获得今日的积分冠军</text>
+      <text class="content-bottom-text">{{data.name ? data.name : '暂时无人'}} 获得今日的积分冠军</text>
       <text class="right-arrow"></text>
     </view>
   </view>
@@ -43,7 +43,7 @@
           <view class="brief-content">{{item.approvalContent}}</view>
         </view>
         <view slot="extra" class="extra">
-          {{item.addIntegral>0 ? '+' : ''}}{{item.addIntegral}}    {{item.integralTypeId == '1' ? 'A分' : (item.integralTypeId == '2' ? 'B分' : 'C分')}}
+          {{item.sqIntegral>0 ? '+' : ''}}{{item.sqIntegral}}    {{item.integralTypeId == '1' ? 'A分' : (item.integralTypeId == '2' ? 'B分' : 'C分')}}
         </view>
       </list-item>
     </block> 
