--- a/page/work/declare/approve/index.axml
+++ b/page/work/declare/approve/index.axml
@@ -25,6 +25,7 @@
     <view class="page-section-demo">
       <textarea auto-height placeholder="输入备注信息" name="textarea" style="font-size: 14px" />
     </view>
+    <view class="form-line" />
     <view class="page-section-btns">
       <view onTap="chooseImage">选择照片</view>
     </view>
@@ -39,30 +40,30 @@
       </view>
     </picker>
     <view class="form-line" />
-    <picker onChange="changeFrom" value="{{arrIndexFrom}}" range="{{objectArray}}" range-key="name" name="from">
+    <picker onChange="changeFrom" value="{{arrIndexFrom}}" range="{{user}}" range-key="userName" name="from">
       <view class="row">
         <view class="row-title">申请人</view>
-        <view class="row-extra">当前选择：{{objectArray[arrIndexFrom].name}}</view>
+        <view class="row-extra">当前选择：{{user[arrIndexFrom].userName}}</view>
         <image class="row-arrow" src="/image/arrowright.png" mode="aspectFill" />
       </view>
     </picker>
     <view class="form-line" />
-    <picker onChange="changeApp" value="{{arrIndexApp}}" range="{{objectArray}}" range-key="name" name="app">
+    <picker onChange="changeApp" value="{{arrIndexApp}}" range="{{apps}}" range-key="userName" name="app">
       <view class="row">
         <view class="row-title">审批人</view>
-        <view class="row-extra">当前选择：{{objectArray[arrIndexApp].name}}</view>
+        <view class="row-extra">当前选择：{{apps[arrIndexApp].userName}}</view>
         <image class="row-arrow" src="/image/arrowright.png" mode="aspectFill" />
       </view>
     </picker>
     <view class="form-line" />
-    <picker onChange="changeTo" value="{{arrIndexTo}}" range="{{objectArray}}" range-key="name" name="to">
+    <picker onChange="changeTo" value="{{arrIndexTo}}" range="{{users}}" range-key="userName" name="to">
       <view class="row">
         <view class="row-title">抄送</view>
-        <view class="row-extra">当前选择：{{objectArray[arrIndexTo].name}}</view>
+        <view class="row-extra">当前选择：{{users[arrIndexTo].userName}}</view>
         <image class="row-arrow" src="/image/arrowright.png" mode="aspectFill" />
       </view>
     </picker>
     <view class="form-line" />
-    <button formType="submit" type="primary" >提交</button>
+    <button formType="submit" type="primary" loading="{{loading}}">提交</button>
   </form>
 </view>
