--- a/page/work/index/wait/details/index.axml
+++ b/page/work/index/wait/details/index.axml
@@ -43,5 +43,11 @@
     failIndex="{{failIndex}}"
     items="{{items}}"
     direction="vertical"
+    a:if="{{options.status}}"
   ></steps>
+  <view class="page-section-btns" a:else>
+    <view><button size="mini" type="ghost" onTap="todoBack">撤销审批</button></view>
+    <view><button size="mini" type="primary" onTap="todoPass">审批通过</button></view>
+    <view><button size="mini" type="warn" onTap="todoStop">审批不过</button></view>
+  </view>
 </view>
