--- a/page/personal/index/index.axml
+++ b/page/personal/index/index.axml
@@ -1,4 +1,4 @@
-<view class="page" style="min-height: {{height}}">
+<view class="page" style="min-height: {{height}}px">
   <view class="wrapper">
   <card
     thumb="{{data.avatar ? data.avatar : '/image/logo.jpg'}}"
