--- a/page/work/declare/approve/index.axml
+++ b/page/work/declare/approve/index.axml
@@ -97,7 +97,7 @@
         <checkbox-group onChange="onChange" name="to" style="height: {{height - 91}}px" class="checkbox-wrapper">
           <label class="checkbox" a:for="{{users}}" key="label-{{index}}">
             <checkbox value="{{item}}" checked="{{item.checked}}" disabled="{{item.disabled}}" class="checkbox-label"/>
-            <image src="/image/logo.jpg" />
+            <image src="{{item.avatar ? item.avatar : '/image/logo.jpg'}}" />
             <text class="checkbox-text">{{item.userName}}</text>
             <text class="checkbox-details">美容：桥东店</text>
           </label>
@@ -109,7 +109,7 @@
         <view>
           <button size="mini" type="primary" formType="submit">确定</button>
         </view>
-        <view><button size="mini" type="warn" formType="reset">重置</button></view>
+        <!-- <view><button size="mini" type="warn" formType="reset">重置</button></view> -->
       </view>
     </form>
   </view>
