--- a/page/home/index/index.axml
+++ b/page/home/index/index.axml
@@ -74,6 +74,8 @@
         <view class="brief">
           <view class="brief-title">{{item.approvalTitle}}</view>
           <view class="brief-content">{{item.approvalContent}}</view>
+          <image class="brief-image" src="{{item}}" a:for="{{item.approvalImg}}" catchTap="preview" data-index="{{index}}"/>
+          <view class="brief-time">{{item.spTime}}</view>
         </view>
         <view slot="extra" class="extra">
           {{item.sqIntegral>0 ? '+' : ''}}{{item.sqIntegral}}    {{item.integralTypeId == '1' ? 'A分' : (item.integralTypeId == '2' ? 'B分' : 'C分')}}
